--- a/Resources/scss/main.css
+++ b/Resources/scss/main.css
@@ -1,33 +1,20 @@
 body {
-  font-family: 'Montserrat', 'sans-serif' !important;
+  font-family: 'Nunito', 'sans-serif' !important;
   font-weight: 300;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.9))), url(/Resources/imgs/hero.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)), url(/Resources/imgs/hero.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
+  background: #ffffff;
 }
 
 body ul {
   text-transform: uppercase;
 }
 
-body #home {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/Resources/imgs/hero2.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/Resources/imgs/hero2.jpg);
+body #header {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/imgs/hero2.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/imgs/hero2.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   height: 100vh;
-}
-
-body #hero-img {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/Resources/imgs/hero3.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/Resources/imgs/hero3.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  height: 70vh;
 }
 
 body h1, body h2, body h3, body h4, body h5 {
@@ -70,28 +57,38 @@ body .hero-text {
 section {
   display: inline-block;
   text-align: center;
+  min-height: 100vh;
 }
 
 section .row-cust::after {
   content: '';
   display: inline-block;
-  width: 20%;
+  width: 15%;
   height: 2px;
-  background-color: #07b607;
-}
-
-section .div-cust {
-  min-height: 200px;
-}
-
-section .carousel-box {
-  color: #000000;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.5)));
-  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.5));
+  background-color: #290088;
 }
 
 section img {
   width: 100%;
+}
+
+section .comm-img {
+  width: 64px;
+  height: 64px;
+  margin: 5px;
+}
+
+section .intro-txt {
+  min-height: 300px;
+}
+
+#team {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/imgs/hero.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/imgs/hero.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  color: #ffffff;
 }
 
 /*!
@@ -114,7 +111,7 @@ section img {
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #07b607;
+  --primary: #290088;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -250,13 +247,13 @@ sup {
 }
 
 a {
-  color: #07b607;
+  color: #290088;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #046c04;
+  color: #12003c;
   text-decoration: underline;
 }
 
@@ -1815,23 +1812,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #baebba;
+  background-color: #c3b8de;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #7ed97e;
+  border-color: #907ac1;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #a6e5a6;
+  background-color: #b4a7d6;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #a6e5a6;
+  background-color: #b4a7d6;
 }
 
 .table-secondary,
@@ -2132,10 +2129,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #45f845;
+  border-color: #5309ff;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2683,8 +2680,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2698,38 +2695,38 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #07b607;
-  border-color: #07b607;
+  background-color: #290088;
+  border-color: #290088;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #069106;
-  border-color: #058505;
+  background-color: #1d0062;
+  border-color: #1a0055;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(44, 193, 44, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(44, 193, 44, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(73, 38, 154, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(73, 38, 154, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #07b607;
-  border-color: #07b607;
+  background-color: #290088;
+  border-color: #290088;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #058505;
-  border-color: #057905;
+  background-color: #1a0055;
+  border-color: #160048;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(44, 193, 44, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(44, 193, 44, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(73, 38, 154, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(73, 38, 154, 0.5);
 }
 
 .btn-secondary {
@@ -2985,37 +2982,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #07b607;
-  border-color: #07b607;
+  color: #290088;
+  border-color: #290088;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #07b607;
-  border-color: #07b607;
+  background-color: #290088;
+  border-color: #290088;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #07b607;
+  color: #290088;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #07b607;
-  border-color: #07b607;
+  background-color: #290088;
+  border-color: #290088;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3258,12 +3255,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #07b607;
+  color: #290088;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #046c04;
+  color: #12003c;
   text-decoration: underline;
 }
 
@@ -3562,7 +3559,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #07b607;
+  background-color: #290088;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3950,23 +3947,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #07b607;
-  background-color: #07b607;
+  border-color: #290088;
+  background-color: #290088;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #45f845;
+  border-color: #5309ff;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #76fa76;
-  border-color: #76fa76;
+  background-color: #763cff;
+  border-color: #763cff;
 }
 
 .custom-control-input:disabled ~ .custom-control-label {
@@ -4016,8 +4013,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #07b607;
-  background-color: #07b607;
+  border-color: #290088;
+  background-color: #290088;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4025,11 +4022,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(7, 182, 7, 0.5);
+  background-color: rgba(41, 0, 136, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(7, 182, 7, 0.5);
+  background-color: rgba(41, 0, 136, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -4041,7 +4038,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(7, 182, 7, 0.5);
+  background-color: rgba(41, 0, 136, 0.5);
 }
 
 .custom-switch {
@@ -4082,7 +4079,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(7, 182, 7, 0.5);
+  background-color: rgba(41, 0, 136, 0.5);
 }
 
 .custom-select {
@@ -4105,10 +4102,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #45f845;
+  border-color: #5309ff;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4165,9 +4162,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #45f845;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  border-color: #5309ff;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -4230,16 +4227,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4250,7 +4247,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #07b607;
+  background-color: #290088;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4269,7 +4266,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #76fa76;
+  background-color: #763cff;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4285,7 +4282,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #07b607;
+  background-color: #290088;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4304,7 +4301,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #76fa76;
+  background-color: #763cff;
 }
 
 .custom-range::-moz-range-track {
@@ -4323,7 +4320,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #07b607;
+  background-color: #290088;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4341,7 +4338,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #76fa76;
+  background-color: #763cff;
 }
 
 .custom-range::-ms-track {
@@ -4473,7 +4470,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #07b607;
+  background-color: #290088;
 }
 
 .nav-fill .nav-item {
@@ -5264,14 +5261,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #07b607;
+  color: #290088;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #046c04;
+  color: #12003c;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5280,8 +5277,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5298,8 +5295,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #07b607;
-  border-color: #07b607;
+  background-color: #290088;
+  border-color: #290088;
 }
 
 .page-item.disabled .page-link {
@@ -5386,18 +5383,18 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #07b607;
+  background-color: #290088;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #058505;
+  background-color: #1a0055;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(7, 182, 7, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(41, 0, 136, 0.5);
 }
 
 .badge-secondary {
@@ -5560,17 +5557,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #045f04;
-  background-color: #cdf0cd;
-  border-color: #baebba;
+  color: #150047;
+  background-color: #d4cce7;
+  border-color: #c3b8de;
 }
 
 .alert-primary hr {
-  border-top-color: #a6e5a6;
+  border-top-color: #b4a7d6;
 }
 
 .alert-primary .alert-link {
-  color: #022e02;
+  color: #060014;
 }
 
 .alert-secondary {
@@ -5714,7 +5711,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #07b607;
+  background-color: #290088;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5817,8 +5814,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #07b607;
-  border-color: #07b607;
+  background-color: #290088;
+  border-color: #290088;
 }
 
 .list-group-horizontal {
@@ -5962,19 +5959,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #045f04;
-  background-color: #baebba;
+  color: #150047;
+  background-color: #c3b8de;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #045f04;
-  background-color: #a6e5a6;
+  color: #150047;
+  background-color: #b4a7d6;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #045f04;
-  border-color: #045f04;
+  background-color: #150047;
+  border-color: #150047;
 }
 
 .list-group-item-secondary {
@@ -6997,13 +6994,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #07b607 !important;
+  background-color: #290088 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #058505 !important;
+  background-color: #1a0055 !important;
 }
 
 .bg-secondary {
@@ -7125,7 +7122,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #07b607 !important;
+  border-color: #290088 !important;
 }
 
 .border-secondary {
@@ -10469,11 +10466,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #07b607 !important;
+  color: #290088 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #046c04 !important;
+  color: #12003c !important;
 }
 
 .text-secondary {
